--- a/client/src/app/components/persons-list/persons-list.component.html
+++ b/client/src/app/components/persons-list/persons-list.component.html
@@ -1,71 +1,101 @@
 <div class="container">
-	<div class="alert alert-danger" *ngIf="messages.length > 0">
-		<strong>Error message:</strong><br>
-		<ul>
-			<li *ngFor="let message of messages">{{message}}</li>
-		</ul>
-	</div>
-	<table class="table table-bordered">
-		<thead>
-			<tr>
-				<th (click)="setSortByColumn('lastName')"
-					[class.sortableAsc]="sortBy === 'lastName' && sortDirection === 'ASC'"
-					[class.sortableDesc]="sortBy === 'lastName' && sortDirection === 'DESC'"
-					[class.sortable]="sortBy !== 'lastName'"
-				>Last name</th>
-				<th (click)="setSortByColumn('firstName')"
-					[class.sortableAsc]="sortBy === 'firstName' && sortDirection === 'ASC'"
-					[class.sortableDesc]="sortBy === 'firstName' && sortDirection === 'DESC'"
-					[class.sortable]="sortBy !== 'firstName'"
-				>First name</th>
-				<th (click)="setSortByColumn('socialNumber')"
-					[class.sortableAsc]="sortBy === 'socialNumber' && sortDirection === 'ASC'"
-					[class.sortableDesc]="sortBy === 'socialNumber' && sortDirection === 'DESC'"
-					[class.sortable]="sortBy !== 'socialNumber'"
-				>Social number</th>
-				<th (click)="setSortByColumn('telephone')"
-					[class.sortableAsc]="sortBy === 'telephone' && sortDirection === 'ASC'"
-					[class.sortableDesc]="sortBy === 'telephone' && sortDirection === 'DESC'"
-					[class.sortable]="sortBy !== 'telephone'"
-				>Telephone</th>
-				<th (click)="setSortByColumn('birthDate')"
-					[class.sortableAsc]="sortBy === 'birthDate' && sortDirection === 'ASC'"
-					[class.sortableDesc]="sortBy === 'birthDate' && sortDirection === 'DESC'"
-					[class.sortable]="sortBy !== 'birthDate'"
-				>Birth date</th>
-				<th (click)="setSortByColumn('city')"
-					[class.sortableAsc]="sortBy === 'city' && sortDirection === 'ASC'"
-					[class.sortableDesc]="sortBy === 'city' && sortDirection === 'DESC'"
-					[class.sortable]="sortBy !== 'city'"
-				>City</th>
-			</tr>
-		</thead>
-		<tbody *ngIf="totalRowsCount > 0">
-			<tr *ngFor="let person of personsList">
-				<td>{{ person.lastName }}</td>
-				<td>{{ person.firstName }}</td>
-				<td>{{ person.socialNumber }}</td>
-				<td>{{ formatTelephone(person.telephone) }}</td>
-				<td>{{ person.birthDate | date:'y-MM-dd' }}</td>
-				<td>{{ person.city }}</td>
-			</tr>
-		</tbody>
-		<tbody *ngIf="totalRowsCount === 0">
-			<tr>
-				<td colspan='6'>Loading...</td>
-			</tr>
-		</tbody>
-	</table>
-	<nav *ngIf="totalRowsCount > 0">
-		<app-ui-table-navigator
-				[totalRowsCount]="totalRowsCount"
-				[pageSize]="pageSize"
-				[currentPage]="pageNumber"
-				(pageSizeChanged)="handlePageSizeChanged($event)"
-				(currentPageChanged)="handleCurrentPageChanged($event)"
-		></app-ui-table-navigator>
-	</nav>
-	<div>
-		<button class="btn btn-default">Test</button>
+	<div class="row">
+		<div class="col-sm-12">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h1 class="panel-title"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span> {{ translationService.translate('Persons list') }}</h1>
+				</div>
+				<div class="panel-body">
+					<ui-errors-panel [errorsList]="errorsList"></ui-errors-panel>
+					<form [formGroup]="personsListForm">
+						<table class="table table-bordered table-hover">
+							<thead>
+								<tr>
+									<th (click)="setSortByColumn('lastName')"
+										[class.sortableAsc]="sortBy === 'lastName' && sortDirection === 'ASC'"
+										[class.sortableDesc]="sortBy === 'lastName' && sortDirection === 'DESC'"
+										[class.sortable]="sortBy !== 'lastName'"
+									>{{ translationService.translate('Last name') }}</th>
+									<th (click)="setSortByColumn('firstName')"
+										[class.sortableAsc]="sortBy === 'firstName' && sortDirection === 'ASC'"
+										[class.sortableDesc]="sortBy === 'firstName' && sortDirection === 'DESC'"
+										[class.sortable]="sortBy !== 'firstName'"
+									>{{ translationService.translate('First name') }}</th>
+									<th (click)="setSortByColumn('socialNumber')"
+										[class.sortableAsc]="sortBy === 'socialNumber' && sortDirection === 'ASC'"
+										[class.sortableDesc]="sortBy === 'socialNumber' && sortDirection === 'DESC'"
+										[class.sortable]="sortBy !== 'socialNumber'"
+									>{{ translationService.translate('Social number') }}</th>
+									<th (click)="setSortByColumn('telephone')"
+										[class.sortableAsc]="sortBy === 'telephone' && sortDirection === 'ASC'"
+										[class.sortableDesc]="sortBy === 'telephone' && sortDirection === 'DESC'"
+										[class.sortable]="sortBy !== 'telephone'"
+									>{{ translationService.translate('Telephone') }}</th>
+									<th (click)="setSortByColumn('birthDate')"
+										[class.sortableAsc]="sortBy === 'birthDate' && sortDirection === 'ASC'"
+										[class.sortableDesc]="sortBy === 'birthDate' && sortDirection === 'DESC'"
+										[class.sortable]="sortBy !== 'birthDate'"
+									>{{ translationService.translate('Birth date') }}</th>
+									<th (click)="setSortByColumn('city')"
+										[class.sortableAsc]="sortBy === 'city' && sortDirection === 'ASC'"
+										[class.sortableDesc]="sortBy === 'city' && sortDirection === 'DESC'"
+										[class.sortable]="sortBy !== 'city'"
+									>{{ translationService.translate('City') }}</th>
+								</tr>
+								<tr>
+									<td>
+										<input type="text" class="form-control" formControlName="filterLastName">
+									</td>
+									<td>
+										<input type="text" class="form-control" formControlName="filterFirstName">
+									</td>
+									<td>
+										<input type="text" class="form-control" formControlName="filterSocialNumber">
+									</td>
+									<td>
+										<input type="text" class="form-control" formControlName="filterTelephone">
+									</td>
+									<td>
+										<input type="date" class="form-control" formControlName="filterBirthDate" MaxLength="10">
+									</td>
+									<td>
+										<input type="text" class="form-control" formControlName="filterCity">
+									</td>
+								</tr>
+							</thead>
+							<tbody *ngIf="totalRowsCount > 0">
+								<tr *ngFor="let person of personsList" [class.info]="selectedPerson && person.id === selectedPerson.id" (click)="selectPersonClick(person)">
+									<td>{{ person.lastName }}</td>
+									<td>{{ person.firstName }}</td>
+									<td>{{ person.socialNumber }}</td>
+									<td>{{ formatTelephone(person.telephone) }}</td>
+									<td>{{ person.birthDate | date:'y-MM-dd' }}</td>
+									<td>{{ person.city }}</td>
+								</tr>
+							</tbody>
+							<tbody *ngIf="totalRowsCount === 0">
+								<tr>
+									<td colspan='6'>{{ translationService.translate('Loading') }}...</td>
+								</tr>
+							</tbody>
+						</table>
+					</form>
+					<nav *ngIf="totalRowsCount > 0">
+						<ui-table-navigator
+								[totalRowsCount]="totalRowsCount"
+								[pageSize]="pageSize"
+								[currentPage]="pageNumber"
+								(pageSizeChanged)="handlePageSizeChanged($event)"
+								(currentPageChanged)="handleCurrentPageChanged($event)"
+						></ui-table-navigator>
+					</nav>
+					<div>
+						<button class="btn btn-primary" (click)="newPerson()"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> {{ translationService.translate('New person') }}</button>
+						<button class="btn btn-warning" (click)="editPerson()" [disabled]="!selectedPerson"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> {{ translationService.translate('Edit person') }}</button>
+						<button class="btn btn-danger" (click)="deletePerson()" [disabled]="!selectedPerson"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> {{ translationService.translate('Delete person') }}</button>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
